--- a/index.html
+++ b/index.html
@@ -4,8 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LoftHouse</title>
-    <link rel="stylesheet" href="./styles/reset.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/main.min.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="header__top">
+        <div class="container">
+          <div class="header__top-row">
+            <a href="#"><img src="./image/logo.svg" alt="LoftHouse logo" /></a>
+            <div class="header__nav">
+              <nav class="nav">
+                <ul class="nav__list">
+                  <li class="nav__list-item"><a href="#">О комплексе</a></li>
+                  <li class="nav__list-item"><a href="#">Район</a></li>
+                  <li class="nav__list-item"><a href="#">Каталог квартир</a></li>
+                  <li class="nav__list-item"><a href="#">Ипотека</a></li>
+                  <li class="nav__list-item"><a href="#">Контакты</a></li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <h1 class="header__title">Жилой комплекс <br />в историческом центре</h1>
+        <a class="header__scroll" href="#benefits"><img src="./image/header/mouse.svg" alt="scroll next" /></a>
+      </div>
+
+      <div class="header__footer">
+        <!-- <div class="container"> -->
+        <div class="header__contacts">
+          <a class="info info--map" href="#section-map">Наб. реки Фонтанки 10-15</a>
+          <a class="info info--phone" href="tel:+78121234567">8 (812) 123-45-67</a>
+        </div>
+        <!-- </div> -->
+      </div>
+    </header>
+  </body>
 </html>
