--- a/index.html
+++ b/index.html
@@ -33,13 +33,36 @@
       </div>
 
       <div class="header__footer">
-        <!-- <div class="container"> -->
-        <div class="header__contacts">
+        <div class="text-right">
           <a class="info info--map" href="#section-map">Наб. реки Фонтанки 10-15</a>
-          <a class="info info--phone" href="tel:+78121234567">8 (812) 123-45-67</a>
         </div>
-        <!-- </div> -->
+        <a class="info info--phone" href="tel:+78121234567">8 (812) 123-45-67</a>
       </div>
     </header>
+    <main>
+      <section class="benefits">
+        <div class="container container--benefits">
+          <h2 class="visually-hidden">Преимущества ЖК</h2>
+          <div class="benefits__row">
+            <div class="benefits__item1">
+              <img class="benefits__img" src="./image/benefits/banch.png" alt="" />
+              <p class="benefits__text">Рядом исторические парки&nbsp;и&nbsp;скверы</p>
+            </div>
+            <div class="benefits__item2">
+              <img class="benefits__img" src="./image/benefits/building.png" alt="" />
+              <p class="benefits__text">Полностью обустроенный</p>
+            </div>
+            <div class="benefits__item3">
+              <img class="benefits__img" src="./image/benefits/fountain.png" alt="" />
+              <p class="benefits__text">10 фонтанов на территории</p>
+            </div>
+            <div class="benefits__item4">
+              <img class="benefits__img" src="./image/benefits/bicycle.png" alt="" />
+              <p class="benefits__text">6 км велодорожек</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
