--- a/index.html
+++ b/index.html
@@ -63,6 +63,29 @@
           </div>
         </div>
       </section>
+      <section class="departments">
+        <div class="container">
+          <h2 class="departments__title title-2">Наши квартиры</h2>
+          <div class="apartmemt__cards">
+            <a class="card" href="#">
+              <img class="card__img" src="./image/departments/01.jpg" alt="Пентхаус" />
+              <h3 class="card__title">Пентхаус “Loft Олимп”</h3>
+            </a>
+            <a class="card" href="#">
+              <img class="card__img" src="./image/departments/02.jpg" alt="Апартаменты" />
+              <h3 class="card__title">Апартаменты “Nice Loft”</h3>
+            </a>
+            <a class="card" href="#">
+              <img class="card__img" src="./image/departments/03.jpg" alt="Апартаменты" />
+              <h3 class="card__title">Апартаменты “Loft Studio”</h3>
+            </a>
+            <a class="card" href="#">
+              <img class="card__img" src="./image/departments/04.jpg" alt="Loft квартира" />
+              <h3 class="card__title">Loft квартира “Престиж”</h3>
+            </a>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
