--- a/index.html
+++ b/index.html
@@ -86,6 +86,29 @@
           </div>
         </div>
       </section>
+      <section class="cta">
+        <div class="container">
+          <h2 class="cta__title title-2">Хотите посмотреть?</h2>
+          <div class="cta__wrapper">
+            <div class="cta__text">
+              <p>
+                ЖК LoftHouse – это проект бизнес-класса, расположенный в центре города, на Наб. реки Фонтанки 10-15.
+                Комплекс предлагает своим жильцам квартиры площадью от 40 до 170 кв. м. В здании будет три секции, в
+                которых разместится всего 56 квартир.
+              </p>
+            </div>
+            <form class="form cta__form" action="">
+              <input class="form__input" type="text" placeholder="Ваше имя" autocomplete="off" />
+              <input class="form__input" type="text" placeholder="Ваш телефон" autocomplete="off" />
+              <p class="form__privacy">
+                *Мы никому не передаем ваши данные.<br />
+                И не сохраняем ваш номер в базу.
+              </p>
+              <button class="form__btn" type="submit">Посмотреть район</button>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
