--- a/index.html
+++ b/index.html
@@ -109,6 +109,19 @@
           </div>
         </div>
       </section>
+      <section class="video">
+        <div class="container">
+          <h2 class="visually-hidden">Видео про ЖК LoftHouse</h2>
+          <a
+            class="video__link"
+            href="https://www.youtube.com/watch?v=-YAzSex8zIo&ab_channel=%D0%92%D0%B5%D0%B1%D0%9A%D0%B0%D0%B4%D0%B5%D0%BC%D0%B8-%D0%B2%D0%B5%D0%B1-%D1%80%D0%B0%D0%B7%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B0%2C%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5%D0%B8IT"
+            target="_blank"
+          >
+            <img class="video__icon" src="./image/video/play-button.svg" alt="video__icon" />
+            <img class="video__img" src="./image/video/video-img.jpg" alt="video__img" />
+          </a>
+        </div>
+      </section>
     </main>
   </body>
 </html>
