--- a/index.html
+++ b/index.html
@@ -122,6 +122,14 @@
           </a>
         </div>
       </section>
+      <section class="section-map">
+        <div class="container">
+          <h2 class="title-2 section-map__title">Район на карте</h2>
+          <div class="section-map__map">
+            <div class="map" id="map"></div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
