--- a/index.html
+++ b/index.html
@@ -130,6 +130,21 @@
           </div>
         </div>
       </section>
+
+      <section class="feedback">
+        <div class="container">
+          <h2 class="feedback__title title-2">Есть вопросы?</h2>
+          <form class="feedback__form form" action="">
+            <p class="form__privacy">
+              *Мы никому не передаем ваши данные.<br />
+              И не сохраняем ваш номер в базу.
+            </p>
+            <input class="form__input" type="text" placeholder="Ваше имя" autocomplete="off" />
+            <input class="form__input" type="text" placeholder="Ваш телефон" autocomplete="off" />
+            <button class="form__btn" type="submit">Посмотреть район</button>
+          </form>
+        </div>
+      </section>
     </main>
   </body>
 </html>
