--- a/index.html
+++ b/index.html
@@ -130,7 +130,6 @@
           </div>
         </div>
       </section>
-
       <section class="feedback">
         <div class="container">
           <h2 class="feedback__title title-2">Есть вопросы?</h2>
@@ -146,5 +145,60 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <div class="container">
+        <footer class="footer__grid">
+          <div class="footer__logo">
+            <a href="#"><img src="./image/logo.svg" alt="LoftHouse logo" /></a>
+          </div>
+          <div class="footer__nav">
+            <nav>
+              <ul class="footer__nav-list">
+                <li class="nav__list-item"><a href="#">О комплексе</a></li>
+                <li class="nav__list-item"><a href="#">Район</a></li>
+                <li class="nav__list-item"><a href="#">Каталог квартир</a></li>
+                <li class="nav__list-item"><a href="#">Ипотека</a></li>
+                <li class="nav__list-item"><a href="#">Контакты</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="footer__nav">
+            <nav>
+              <ul class="footer__nav-list">
+                <li class="nav__list-item"><a href="#">Поселение и переезд</a></li>
+                <li class="nav__list-item"><a href="#">Сервисные услуги</a></li>
+                <li class="nav__list-item"><a href="#">Экологическая устойчивость</a></li>
+                <li class="nav__list-item"><a href="#">Инвестиционные возможности</a></li>
+                <li class="nav__list-item"><a href="#">Программа лояльности </a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="footer__address">
+            <ul class="footer__nav-list">
+              <li class="nav__list-item">Адрес: Наб. реки Фонтанки 10-15</li>
+              <li class="nav__list-item">Телефон: <a class=" " href="tel:+78121234567">8 (812) 123-45-67</a></li>
+              <li class="nav__list-item">Отдел продаж: 10:00 - 20:00</li>
+              <li class="nav__list-item">
+                E-mail: <a class="link-bold" href="mailto:vip@lofthouse.ru">vip@lofthouse.ru</a>
+              </li>
+            </ul>
+            <ul class="footer__socials">
+              <li class="footer__socials-item">
+                <a href="#"><img src="./image/socials/youtube.svg" alt="" /></a>
+              </li>
+              <li class="footer__socials-item">
+                <a href="#"><img src="./image/socials/vk.svg" alt="" /></a>
+              </li>
+              <li class="footer__socials-item">
+                <a href="#"><img src="./image/socials/facebook.svg" alt="" /></a>
+              </li>
+              <li class="footer__socials-item">
+                <a href="#"><img src="./image/socials/instagram.svg" alt="" /></a>
+              </li>
+            </ul>
+          </div>
+        </footer>
+      </div>
+    </footer>
   </body>
 </html>
