mobile adaptation of the heade

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 </ul>
               </nav>
             </div>
+            <div class="header__nav-btn">NAV BTN</div>
           </div>
         </div>
       </div>
@@ -40,7 +41,7 @@
       </div>
     </header>
     <main>
-      <section class="benefits">
+      <section class="benefits none">
         <div class="container container--benefits">
           <h2 class="visually-hidden">Преимущества ЖК</h2>
           <div class="benefits__row">
@@ -63,7 +64,7 @@
           </div>
         </div>
       </section>
-      <section class="apartments">
+      <section class="apartments none">
         <div class="container">
           <h2 class="apartments__title title-2">Наши квартиры</h2>
           <div class="apartmemt__cards">
@@ -86,7 +87,7 @@
           </div>
         </div>
       </section>
-      <section class="cta">
+      <section class="cta none">
         <div class="container">
           <h2 class="cta__title title-2">Хотите посмотреть?</h2>
           <div class="cta__wrapper">
@@ -109,7 +110,7 @@
           </div>
         </div>
       </section>
-      <section class="video">
+      <section class="video none">
         <div class="container">
           <h2 class="visually-hidden">Видео про ЖК LoftHouse</h2>
           <a
@@ -122,7 +123,7 @@
           </a>
         </div>
       </section>
-      <section class="section-map">
+      <section class="section-map none">
         <div class="container">
           <h2 class="title-2 section-map__title">Район на карте</h2>
           <div class="section-map__map">
@@ -130,7 +131,7 @@
           </div>
         </div>
       </section>
-      <section class="feedback">
+      <section class="feedback none">
         <div class="container">
           <h2 class="feedback__title title-2">Есть вопросы?</h2>
           <form class="feedback__form form" action="">
@@ -145,7 +146,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer none">
       <div class="container">
         <footer class="footer__grid">
           <div class="footer__logo">
