--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="container">
           <div class="header__top-row">
             <a href="#"><img src="./image/logo.svg" alt="LoftHouse logo" /></a>
+
             <div class="header__nav">
               <nav class="nav">
                 <ul class="nav__list">
@@ -23,7 +24,10 @@
                 </ul>
               </nav>
             </div>
-            <div class="header__nav-btn">NAV BTN</div>
+
+            <div class="header__nav-btn">
+              <button class="nav-icon-btn"><div class="nav-icon"></div></button>
+            </div>
           </div>
         </div>
       </div>
@@ -201,5 +205,7 @@
         </footer>
       </div>
     </footer>
+
+    <script src="./js/main.js"></script>
   </body>
 </html>
