--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
     </header>
     <main>
-      <section class="benefits none">
+      <section class="benefits">
         <div class="container container--benefits">
           <h2 class="visually-hidden">Преимущества ЖК</h2>
           <div class="benefits__row">
