mobile adaptation of the apartments

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </div>
         </div>
       </section>
-      <section class="apartments none">
+      <section class="apartments">
         <div class="container">
           <h2 class="apartments__title title-2">Наши квартиры</h2>
           <div class="apartmemt__cards">
