--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           </div>
         </div>
       </section>
-      <section class="cta none">
+      <section class="cta">
         <div class="container">
           <h2 class="cta__title title-2">Хотите посмотреть?</h2>
           <div class="cta__wrapper">
@@ -105,7 +105,7 @@
             <form class="form cta__form" action="">
               <input class="form__input" type="text" placeholder="Ваше имя" autocomplete="off" />
               <input class="form__input" type="text" placeholder="Ваш телефон" autocomplete="off" />
-              <p class="form__privacy">
+              <p class="form__privacy form__privacy--bottom">
                 *Мы никому не передаем ваши данные.<br />
                 И не сохраняем ваш номер в базу.
               </p>
