mobile adaptation of the video, section-map, feedback, footer

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           </div>
         </div>
       </section>
-      <section class="video none">
+      <section class="video">
         <div class="container">
           <h2 class="visually-hidden">Видео про ЖК LoftHouse</h2>
           <a
@@ -127,7 +127,7 @@
           </a>
         </div>
       </section>
-      <section class="section-map none">
+      <section class="section-map">
         <div class="container">
           <h2 class="title-2 section-map__title">Район на карте</h2>
           <div class="section-map__map">
@@ -135,11 +135,11 @@
           </div>
         </div>
       </section>
-      <section class="feedback none">
+      <section class="feedback">
         <div class="container">
           <h2 class="feedback__title title-2">Есть вопросы?</h2>
           <form class="feedback__form form" action="">
-            <p class="form__privacy">
+            <p class="form__privacy form__privacy--bottom">
               *Мы никому не передаем ваши данные.<br />
               И не сохраняем ваш номер в базу.
             </p>
@@ -150,7 +150,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer none">
+    <footer class="footer">
       <div class="container">
         <footer class="footer__grid">
           <div class="footer__logo">
